--- a/Python-notes.ipynb
+++ b/Python-notes.ipynb
@@ -48,6 +48,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Rules for naming a variable in Python\n",
+    "\n",
+    "* Variables names must start with a letter or an underscore like _ product , product_\n",
+    "* The remainder of your variable name may consist of letters, numbers and underscores\n",
+    "* spacy1, pyThon,machine_learning are some valid variable names\n",
+    "* Names are case sensitive.\n",
+    "* case_sensitive, CASE_SENSITIVE, and Case_Sensitive are each a different variable.\n",
+    "* It's a best practice to create a variable that should be coherent with the context you are working on. Let's say you are working with fruit data; the variable name should be \"fruit\" or \"fruit_mango.\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
