--- a/Python-notes.ipynb
+++ b/Python-notes.ipynb
@@ -53,7 +53,6 @@
    "metadata": {},
    "source": [
     "# Rules for naming a variable in Python\n",
-    "\n",
     "* Variables names must start with a letter or an underscore like _ product , product_\n",
     "* The remainder of your variable name may consist of letters, numbers and underscores\n",
     "* spacy1, pyThon,machine_learning are some valid variable names\n",
@@ -63,9 +62,25 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Booleans\n",
+    "\n",
+    "In real life, we often make decisions based on whether something is true or false. For example, if it's raining outside, we might decide to take an umbrella. In programming, we use Booleans to make decisions too! We can write code that checks if something is true or false and then does something based on the answer.\n",
+    "\n",
+    "In the table below, Assume a=3 and b=4.\n",
+    "Operator\tDescription\tExample\n",
+    "\n",
+    "(a == b) is not true.\n",
+    "(a != b) is true\n",
+    "(a > b) is not true.\n",
+    "(a < b) is true.\n",
+    "(a >= b) is not true.\n",
+    "(a <= b) is true.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
