--- a/Python-notes.ipynb
+++ b/Python-notes.ipynb
@@ -81,6 +81,27 @@
     "(a <= b) is true.\n",
     "\n"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Types in Python\n",
+    "As we move forward, we'll be exploring the basics of various data structures in Python, including:\n",
+    "\n",
+    "🧵 Strings: How to create and manipulate text data in Python.\n",
+    "\n",
+    "📜 Lists: How to store and organize collections of items in Python.\n",
+    "\n",
+    "🔄 Tuples: How to create and use immutable sequences of data.\n",
+    "\n",
+    "🆚 Sets: How to work with collections of unique items in Python.\n",
+    "\n",
+    "📚 Dictionaries: How to create and use key-value mappings in Python.\n",
+    "\n",
+    "🔍 By the end of our journey, we'll have a solid understanding of how these data structures work, and we'll be able to use them effectively in our Python programs. So let's dive in and start exploring!"
+   ]
   }
  ],
  "metadata": {
