--- a/Python-notes.ipynb
+++ b/Python-notes.ipynb
@@ -90,7 +90,7 @@
     "# Data Types in Python\n",
     "As we move forward, we'll be exploring the basics of various data structures in Python, including:\n",
     "\n",
-    "🧵 Strings: How to create and manipulate text data in Python.\n",
+    "🧵 Strings: How to create and manipulate text data in Python. (It is immutable)\n",
     "\n",
     "📜 Lists: How to store and organize collections of items in Python.\n",
     "\n",
@@ -101,6 +101,41 @@
     "📚 Dictionaries: How to create and use key-value mappings in Python.\n",
     "\n",
     "🔍 By the end of our journey, we'll have a solid understanding of how these data structures work, and we'll be able to use them effectively in our Python programs. So let's dive in and start exploring!"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finding total 'e's in the Bookshelves\n",
+    "\n",
+    "In your pursuit of expanding your knowledge of Python, you come across a bookstore in search of books on the subject.\n",
+    "\n",
+    "There, you meet a salesperson who is also a Python enthusiast!!\n",
+    "\n",
+    "The salesperson presents you with a challenge - they have a list of five books related to Python and if you can write a program that finds the total number of letter 'e' in the list of books, the store will give you a free book of your choice. 😀\n",
+    "\n",
+    "Are you ready to accept the challenge? 💪"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The total number of 'e's in the list of books is 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "books = \"Python for Everyone, Learn Python the Hard Way, Python Crash Course , Starting Out with Python, Automate the Boring Stuff with Python\"\n",
+    "e_counts = books.count('e')\n",
+    "print(f\"The total number of 'e's in the list of books is {e_counts}\")"
    ]
   }
  ],
