--- a/Python-notes.ipynb
+++ b/Python-notes.ipynb
@@ -137,6 +137,23 @@
     "e_counts = books.count('e')\n",
     "print(f\"The total number of 'e's in the list of books is {e_counts}\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# List\n",
+    "Lists can be thought of the most general version of a sequence in Python.\n",
+    "Lists are constructed with brackets [] and commas separating every element in the list.\n",
+    "Lists are mutable, which means that you can modify them after you've created them."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
