--- a/Python-notes.ipynb
+++ b/Python-notes.ipynb
@@ -153,6 +153,14 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "# Tuples \n",
+    "tuples are similar to lists in many ways, but they have some important differences that make them useful in certain situations. One of the key differences is that tuples are immutable, which means that you can't modify them after they've been created. 🔒"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
